Code reafctoring, added support for @Url, @FormField